# NewTest_MSVC2017

./: CMakeLists.txt  NewTest_zh_CN.ts  advanced_window.cpp  advanced_window.ui  fundamental_window.cpp  fundamental_window.ui  mainwindow.cpp  mainwindow.ui
include/: advanced_window.h  com.h  fundamental_window.h  guicamera.h  mainwindow.h
include/pylon_include/genapic/: GenApiC.h  GenApiC32BitMethods.h  GenApiCDefines.h  GenApiCEnums.h  GenApiCError.h  GenApiCTypes.h
include/pylon_include/pylon/: AcquireContinuousConfiguration.h  AcquireSingleFrameConfiguration.h  ArrayParameter.h  AviCompressionOptions.h  BaslerUniversalCameraEventHandler.h  BaslerUniversalConfigurationEventHandler.h  BaslerUniversalGrabResultData.h  BaslerUniversalGrabResultPtr.h  BaslerUniversalImageEventHandler.h  BaslerUniversalInstantCamera.h  BaslerUniversalInstantCameraArray.h  BooleanParameter.h  BufferFactory.h  Callback.h  CameraEventHandler.h  ChunkParser.h  CommandParameter.h  ConfigurationEventHandler.h  ConfigurationHelper.h  Container.h  Device.h  DeviceAccessMode.h  DeviceClass.h  DeviceFactory.h  DeviceInfo.h  ECleanup.h  ERegistrationMode.h  ETimeoutHandling.h  EnumParameter.h  EnumParameterT.h  EventAdapter.h  EventGrabber.h  EventGrabberProxy.h  FeaturePersistence.h  FloatParameter.h  GrabResultData.h  GrabResultPtr.h  Image.h  ImageDecompressor.h  ImageEventHandler.h  (+63 more)
include/pylon_include/pylon/cameralink/: BaslerCameraLinkCamera.h  BaslerCameraLinkCameraEventHandler.h  BaslerCameraLinkConfigurationEventHandler.h  BaslerCameraLinkDeviceInfo.h  BaslerCameraLinkGrabResultData.h  BaslerCameraLinkGrabResultPtr.h  BaslerCameraLinkImageEventHandler.h  BaslerCameraLinkInstantCamera.h  BaslerCameraLinkInstantCameraArray.h  PylonCLSerDefs.h  (+5 more)
include/pylon_include/pylonc/: PylonAviCompressionOptions.h  PylonC.h  PylonC32BitMethods.h  PylonCDefines.h  PylonCEnums.h  PylonCError.h
include/pylon_include/pylondataprocessing/: IEventObserver.h  IOutputObserver.h  IParameterCollection.h  IUpdateObserver.h  ParameterNames.h  PylonDataProcessing.h  PylonDataProcessingVersion.h  Recipe.h  Update.h  Variant.h  VariantContainer.h  VariantDataType.h
resource/: images.qrc
source/: com.cpp  guicamera.cpp  main.cpp
(+44 files in other folders)
